--- a/app-sp/package.json
+++ b/app-sp/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^2.9.25",
     "domready": "^1.0.7",
     "events": "^1.0.2",
+    "fastclick": "^1.0.6",
     "flux": "^2.0.3",
     "gsap": "^1.16.1",
     "img": "^1.0.0",
@@ -20,7 +21,8 @@
     "lodash": "^3.8.0",
     "object-assign": "^2.0.0",
     "raf": "^2.0.4",
-    "react-prefixr": "^0.1.0"
+    "react-prefixr": "^0.1.0",
+    "react-tappable": "^0.5.0-beta.3"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
